--- a/templates/base.html
+++ b/templates/base.html
@@ -3,33 +3,39 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
+    <link href="{% static 'css/main.css' %}" rel="stylesheet" type="text/css"/>
+
     <title>{% block title %}{% trans 'Главная' %}{% endblock %}</title>
     {% block style %}
     {% endblock %}
 </head>
 <body>
-<header>
-    <div class="nav-menu">
-    <div class="nav-tem">
-        <a href="{% url 'section:index' %}">{% trans 'Главная' %}</a>
-    </div>
-        {% if request.user.is_authenticated %}
-            <div class="nav-item">
-                <a href="#">{% trans 'Профиль' %}</a>
-            </div>
-        {% else %}
-            <div class="nav-item">
-                <a href="{% url 'account:login' %}">{% trans 'Войти' %}</a>
-            </div>
-            <div class="nav-item">
-                <a href="{% url 'account:registration' %}">{% trans 'Регистрация' %}</a>
-            </div>
+<header class="header">
+    <div class="header__logo">
+        <a href="/">
+            <img src="{% static 'img/logo.jpg' %}" alt="logo">
+        </a>
 
-        {% endif %}
+    </div>
+    <div class="container">
+        <div class="header__inner">
+            <nav class="nav">
+                {% if request.user.is_authenticated %}
+                    <a class="nav__link" href="#">{% trans 'Профиль' %}</a>
+                {% else %}
+                    <a class="nav__link" href="{% url 'account:login' %}">{% trans 'Войти' %}</a>
+                    <a class="nav__link" href="{% url 'account:registration' %}">{% trans 'Регистрация' %}</a>
+                {% endif %}
+            </nav>
+
+        </div>
     </div>
 </header>
-{% block content %}
-{% endblock %}
+
+<div class="content">
+    {% block content %}
+    {% endblock %}
+</div>
 
 {% block script %}
 {% endblock %}
